welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: not a legal formal parameter
	if(talking && (hour >= 0 && hour <= 7 || hour => 20 && hour <=23 )){
                                              ^